# RayTracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RayTracer.sln  codeAnalysis.ruleset
RayTracer/: AlignedObject.cpp  AlignedObject.h  AntiAliasingController.cpp  AntiAliasingController.h  Camera.h  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  Image.cpp  Image.h  InfinitePlane.cpp  InfinitePlane.h  JsonSceneLoader.cpp  JsonSceneLoader.h  Light.h  Material.cpp  Material.h  MathsHelper.h  Polygon.cpp  Polygon.h  Ray.h  RayTracer.cpp  RayTracer.h  RayTracer.vcxproj  RayTracer.vcxproj.filters  SceneObject.h  SinMaterial.cpp  SinMaterial.h  SolidMaterial.h  Sphere.cpp  Sphere.h  StripedMaterial.cpp  StripedMaterial.h  TexturedMaterial.cpp  TexturedMaterial.h  Torus.cpp  Torus.h  main.cpp  mat4.h  (+14 more)
